src/pydjinni/generator/cppcli/it/error/expected/include/cppcli/CppCliBarError.hpp
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#pragma once
#include "bar_error.hpp"
namespace Test::Error::CppCli {
[System::Obsolete("error domain is old")]
public ref class BarError abstract : System::Exception {
public:
    BarError();
    BarError(System::String^ message);
    ref class OldErrorCode;
};

[System::Obsolete("error code is old")]
#pragma warning(suppress : 4947)
ref class BarError::OldErrorCode : BarError {
public:
    OldErrorCode();
    OldErrorCode(System::String^ message);

internal:
    #pragma warning(suppress : 4996)
    using CppType = ::test::error::BarError::OldErrorCode;
    using CsType = OldErrorCode^;

    static CppType ToCpp(CsType cs);
    static CsType FromCpp(const CppType& cpp);
private:
};
} // namespace Test::Error::CppCli
